--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "algoliasearch": "^3.33.0",
     "apexcharts": "^3.6.12",
     "auth0-js": "^9.10.4",
-    "axios": "^0.21.1",
+    "axios": "^0.19.0",
     "chart.js": "^2.8.0",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "2.6.5",
     "echarts": "^4.2.1",
+    "express": "^4.17.1",
     "file-saver": "2.0.1",
     "firebase": "^7.13.2",
     "instantsearch.css": "^7.3.1",
@@ -27,7 +29,7 @@
     "perfect-scrollbar": "^1.4.0",
     "postcss-rtl": "1.5.0",
     "prismjs": "^1.16.0",
-    "register-service-worker": "^1.7.2",
+    "register-service-worker": "^1.7.1",
     "vee-validate": "^2.2.8",
     "vue": "^2.6.10",
     "vue-acl": "4.0.7",
@@ -49,7 +51,7 @@
     "vue-property-decorator": "^8.1.1",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.6",
-    "vue-select": "^3.1.0",
+    "vue-select": "^3.10.8",
     "vue-simple-calendar": "^4.2.2",
     "vue-simple-suggest": "^1.9.5",
     "vue-star-rating": "^1.6.1",
@@ -70,6 +72,7 @@
     "@fullhuman/postcss-purgecss": "^1.2.0",
     "@vue/cli-plugin-babel": "^3.7.0",
     "@vue/cli-plugin-eslint": "^3.7.0",
+    "@vue/cli-plugin-pwa": "^4.5.9",
     "@vue/cli-service": "^3.7.0",
     "axios-mock-adapter": "^1.17.0",
     "node-sass": "^4.12.0",
@@ -77,6 +80,7 @@
     "sass-loader": "^7.1.0",
     "script-loader": "0.7.2",
     "tailwindcss": "^1.0.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "workbox-webpack-plugin": "^6.0.2"
   }
 }
