--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-prism-component": "^1.1.1",
     "vue-property-decorator": "^8.1.1",
+    "vue-qrcode-component": "^2.1.1",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.1",
     "vue-select": "^3.10.8",
