--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prismjs": "^1.16.0",
     "register-service-worker": "^1.7.1",
     "vee-validate": "^2.2.8",
+    "verte": "0.0.12",
     "vue": "^2.6.10",
     "vue-acl": "4.0.7",
     "vue-apexcharts": "^1.3.5",
