--- a/package.json
+++ b/package.json
@@ -50,13 +50,14 @@
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-prism-component": "^1.1.1",
     "vue-property-decorator": "^8.1.1",
+    "vue-pure-lightbox": "^3.1.2",
     "vue-qrcode-component": "^2.1.1",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.1",
     "vue-select": "^3.10.8",
     "vue-simple-calendar": "^4.2.2",
     "vue-simple-suggest": "^1.9.5",
-    "vue-star-rating": "^1.6.1",
+    "vue-star-rating": "^1.7.0",
     "vue-tour": "^1.1.0",
     "vue-tree-halower": "^1.8.0",
     "vue-video-player": "^5.0.2",
